Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18059

lfs migrate fails for ost index stripe file

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 2
    • 9223372036854775807

      #!/bin/sh

      set -x

      mkdir /mnt/lustre/ost_0000_folder

      mkdir -p /mnt/lustre/.cray/cds/template/ost_0001_folder

      lfs setstripe -o 0 /mnt/lustre/ost_0000_folder

      lfs setstripe -o 1 /mnt/lustre/.cray/cds/template/ost_0001_folder

      dd if=/dev/random of=/mnt/lustre/ost_0000_folder/test_00 bs=1M count=256

      lfs getstripe /mnt/lustre/ost_0000_folder/test_00

      lfs migrate --non-block --copy /mnt/lustre/.cray/cds/template/ost_0001_folder /mnt/lustre/ost_0000_folder/test_00

            rajeevm Rajeev Mishra
            rajeevm Rajeev Mishra
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: