LU-18059 utils: lfs migrate fails for ost striped file

The lfs migrate fails for the ost striped file
with following error message
lfs migrate: can't create composite layout from
file /mnt/lustre/d56xh.sanity.src:
Numerical result out of range

test_56ej has been added to sanity.sh to test this
scenario.

Signed-off-by: Rajeev Mishra <rajeevm@hpe.com>
HPE-bug-id: LUS-11815
Test-Parameters: trivial
Change-Id: Idc345c3662fde5db3d323019927b4d3a82b04816
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/55847
Tested-by: Maloo <maloo@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Petros Koutoupis <petros.koutoupis@hpe.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>